--- a/css/style.css
+++ b/css/style.css
@@ -5953,31 +5953,46 @@ input:hover {
 
 .modal__360-wrap {
   position: relative;
-  width: 137rem;
-  height: 85rem;
-  margin: auto auto;
-  padding: 14rem 33rem 21rem;
-  background: #0C0C0C;
-  border-radius: 2rem;
-}
-
-.modal__360-img {
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  width: 139rem;
+  height: 90rem;
+  margin: auto auto;
+  padding: 14rem 33rem 21rem;
+  background: #ffffff;
+  border-radius: 2rem;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+.modal__360-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   margin: 0 auto;
-  width: 71.7rem;
-  height: 50.3rem;
-  margin-bottom: 13rem;
+  width: 90rem;
+  height: 90rem;
 }
 
 .buttons {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  bottom: 5%;
+  -webkit-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  transform: translate(-50%);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -5996,7 +6011,7 @@ input:hover {
 }
 .modal__360-prev svg {
   display: inline-block;
-  stroke: #fff;
+  stroke: #0c0c0c;
 }
 .modal__360-prev svg:hover {
   stroke: #009DB8;
@@ -6015,10 +6030,11 @@ input:hover {
   width: 3rem;
   height: 3rem;
   display: inline-block;
+  fill: #656565;
 }
 .modal__360-next svg {
   display: inline-block;
-  stroke: #fff;
+  stroke: #0c0c0c;
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   transform: rotate(180deg);
